--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -13,7 +13,6 @@
 
 .amc-videoplayer {
 	.ComponentsDefault();
-	--amc-videoplayer-accentColor: #fff;
 	--amc-videoplayer-roundedCorder: 3px;
 	--backgroundColor: rgba(0, 0, 0, .4);
 	--transitionDuration: 200ms;
@@ -36,10 +35,10 @@
 			opacity: .8;
 		}
 	}
-
+/*
 	::deep .amc-progressbar {
 		--amc-progressbar-accentColor: var(--amc-videoplayer-accentColor);
-	}
+	}*/
 
 	&-settings {
 		&-subvalue {
