--- a/Demo/Pages/DateTimePickerPage.razor
+++ b/Demo/Pages/DateTimePickerPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/DateTimePicker"
 
-<PageBase Title="Blazor Video Player Component" />
+<PageTitle>Blazor Video Player Component</PageTitle>
 
 <div class="amc-datetimepicker-section">
     <div>
