--- a/Demo/Pages/GridViewPage.razor
+++ b/Demo/Pages/GridViewPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/GridView"
 @inject HttpClient Http
 
-<PageBase Title="Blazor Grid View Component" />
+<PageTitle>Blazor Grid View Component</PageTitle>
 
 <GridView Columns="Columns" Rows="Rows" PageSize="@pageSize" RowsCount="@rowsCount" OnRequestData="OnGridRequestData" />
 
