--- a/Demo/Pages/VideoPlayerPage.razor
+++ b/Demo/Pages/VideoPlayerPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/VideoPlayer"
 
-<PageBase Title="Blazor Video Player Component" />
+<PageTitle>Blazor Video Player Component</PageTitle>
 
 <VideoPlayer ReserveAspectRatio="true" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" />
