--- a/Demo/src/css/site.less
+++ b/Demo/src/css/site.less
@@ -82,11 +82,16 @@ body {
 		margin-right: auto;
 
 		> .amc-progressbar {
-			--amc-progressbar-accentColor: var(--LinkColor) !important;
+			--amc-accentColor: var(--LinkColor);
 			width: 600px;
 		}
 
+		> .amc-volumebar {
+			--amc-accentColor: var(--LinkColor);
+		}
+
 		> .amc-videoplayer {
+			--amc-accentColor: #fff;
 			max-width: 800px;
 			width: 100vw;
 			height: 450px;
