--- a/Demo/wwwroot/css/site.css
+++ b/Demo/wwwroot/css/site.css
@@ -72,10 +72,14 @@ body main {
   margin-right: auto;
 }
 body main > .amc-progressbar {
-  --amc-progressbar-accentColor: var(--LinkColor) !important;
+  --amc-accentColor: var(--LinkColor);
   width: 600px;
 }
+body main > .amc-volumebar {
+  --amc-accentColor: var(--LinkColor);
+}
 body main > .amc-videoplayer {
+  --amc-accentColor: #fff;
   max-width: 800px;
   width: 100vw;
   height: 450px;
