--- a/Components/General/css/common.less
+++ b/Components/General/css/common.less
@@ -15,19 +15,51 @@
 }
 
 .ComponentsDefault {
+	.UnSelectable();
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: .9rem;
-	.UnSelectable();
 
 	button {
 		&, &:active, &:focus, &:visited {
+			background: none;
 			outline: none !important;
 			border: none;
 			border-radius: 0;
+			cursor: pointer;
 		}
 	}
 
 	&, * {
 		-webkit-tap-highlight-color: transparent;
+	}
+
+	::deep {
+		.--amc-iconbutton {
+			&, &:active, &:focus, &:visited {
+				padding: 4px;
+				display: flex;
+			}
+
+			svg {
+				height: 1.8em;
+			}
+		}
+
+		.amc-svg {
+			&-fill {
+				fill: var(--amc-accentColor);
+			}
+
+			&-stroke {
+				fill: none;
+				stroke: var(--amc-accentColor);
+				stroke-width: 0.5;
+				stroke-miterlimit: 10;
+
+				&._corner-rounded {
+					stroke-linecap: round;
+				}
+			}
+		}
 	}
 }
