--- a/Demo/Pages/ProgressBarPage.razor
+++ b/Demo/Pages/ProgressBarPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/ProgressBar"
 
-<PageBase Title="Blazor Progress Bar Component" />
+<PageTitle>Blazor Progress Bar Component</PageTitle>
 
 <ProgressBar Value="20" Total="500" OnChanged="Log" Style="ProgressBarStyle.Flat" />
 
