Cloud Web added. Includes Layout component, Cloud Bundle, and Cloud Head.

--- a/ServerDemo/Pages/DateTimePickerPage.razor
+++ b/ServerDemo/Pages/DateTimePickerPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/DateTimePicker"
 
-<PageTitle>Blazor Video Player Component</PageTitle>
+<CloudHead Title="Date Time Picker" />
 
 <div class="amc-datetimepicker-section">
     <div>
