--- a/ServerDemo/Pages/Index.razor
+++ b/ServerDemo/Pages/Index.razor
@@ -1,2 +1,13 @@
 ﻿@page "/"
 
+@*<HeadContent>
+	<CloudHead Title="Test"
+			   Keywords="key1,key2"
+			   Description="Test Description">
+	</CloudHead>
+
+	<CloudBundle JQuery="3.4.11111" />
+	<CloudBundle Source="cssTest.css" />
+	<CloudBundle Source="jsTest.js" />
+	<CloudBundle Source="amaDevelopersTest.js" />
+</HeadContent>*@
