--- a/ServerDemo/Shared/MainLayout.razor
+++ b/ServerDemo/Shared/MainLayout.razor
@@ -1,9 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
-<Components />
+<header>
+	<Components />
+</header>
 
 <div class="page">
-    <main>
-        @Body
-    </main>
+	<main>
+		@Body
+	</main>
 </div>
+
+<footer>
+</footer>
