--- a/ServerDemo/Pages/ProgressBarPage.razor
+++ b/ServerDemo/Pages/ProgressBarPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/ProgressBar"
 
-<PageTitle>Blazor Progress Bar Component</PageTitle>
+<CloudHead Title="Progress Bar" />
 
 <ProgressBar Value="20" Total="500" OnChanged="Log" Style="ProgressBarStyle.Flat" />
 
