--- a/ServerDemo/Shared/Components.razor
+++ b/ServerDemo/Shared/Components.razor
@@ -4,5 +4,6 @@
         <a href="/volumebar">Volume Bar</a>
         <a href="/videoplayer">Video Player</a>
         <a href="/datetimepicker">Date Time Picker</a>
+        <a href="/popup">Popup</a>
     </div>
 </div>
