--- a/ServerDemo/src/css/site.less
+++ b/ServerDemo/src/css/site.less
@@ -90,6 +90,10 @@ body {
 			--amc-accentColor: var(--LinkColor);
 		}
 
+		> .amc-dialog {
+			--amc-accentColor: var(--LinkColor);
+		}
+
 		> .amc-videoplayer {
 			--amc-accentColor: #fff;
 			max-width: 800px;
