--- a/ServerDemo/Shared/Components.razor
+++ b/ServerDemo/Shared/Components.razor
@@ -5,5 +5,6 @@
         <a href="/videoplayer">Video Player</a>
         <a href="/datetimepicker">Date Time Picker</a>
         <a href="/popup">Popup</a>
+        <a href="/dialog">Dialog</a>
     </div>
 </div>
