--- a/Components/Dialog/dialog.less
+++ b/Components/Dialog/dialog.less
@@ -2,7 +2,7 @@
 
 .amc-dialog {
 	.ComponentsDefault();
-	background-color: rgba(255, 255, 255, .6);
+	background-color: rgba(255, 255, 255, .7);
 	width: 100vw;
 	height: 100vh;
 	position: fixed;
@@ -21,7 +21,7 @@
 		padding: 5px;
 		max-width: 600px;
 		width: 50vw;
-						}
+	}
 
 	&-title {
 		font-size: 2em;
@@ -31,13 +31,14 @@
 		margin-top: 20px;
 		display: flex;
 		justify-content: right;
+		padding: 1px; 
+		gap: 5px;
 
 		button {
 			&,
 			&:focus,
 			&:hover {
-				padding: 7px 10px;
-				margin-right: 5px;
+				padding: .4em .6em;
 				color: var(--amc-accentColor);
 				background-color: #fff;
 				border-radius: 4px;
