--- a/ServerDemo/Pages/DialogPage.razor
+++ b/ServerDemo/Pages/DialogPage.razor
@@ -13,6 +13,14 @@
 	<div>@DialogReply</div>
 </div>
 
+@for (int i = 0; i < 100; i++)
+{
+	<section>
+		<div>
+			Lorem
+		</div>
+	</section>
+}
 
 @code {
 	private Dialog? dialog;
