--- a/ServerDemo/Shared/Components.razor
+++ b/ServerDemo/Shared/Components.razor
@@ -6,5 +6,6 @@
         <a href="/datetimepicker">Date Time Picker</a>
         <a href="/popup">Popup</a>
         <a href="/dialog">Dialog</a>
+        <a href="/dockscrolling">Dock Scrolling</a>
     </div>
 </div>
