--- a/Components/Dialog/Dialog.razor
+++ b/Components/Dialog/Dialog.razor
@@ -1,21 +1,23 @@
 ﻿@namespace AngryMonkey.Cloud.Components
 @inject IJSRuntime jsRuntime
 
-@if (IsOpened)
-{
-	<aside @ref="ComponentElement" class="amc-dialog">
-		<div class="amc-dialog-content">
-			<div class="amc-dialog-title">@Title</div>
-			<div class="amc-dialog-message">@ChildContent</div>
-			@if (Buttons != null && Buttons.Any())
-			{
-				<div class="amc-dialog-buttons">
-					@foreach (DialogButton button in Buttons)
-					{
-						<button @onclick="() => {ButtonClicked(button);}">@button.Text</button>
-					}
-				</div>
-			}
-		</div>
-	</aside>
-}
+<div @ref="ComponentElement">
+	@if (IsOpened)
+	{
+		<aside class="amc-dialog">
+			<div class="amc-dialog-content">
+				<div class="amc-dialog-title">@Title</div>
+				<div class="amc-dialog-message">@ChildContent</div>
+				@if (Buttons != null && Buttons.Any())
+				{
+					<div class="amc-dialog-buttons">
+						@foreach (DialogButton button in Buttons)
+						{
+							<button @onclick="async () => { await ButtonClicked(button);}">@button.Text</button>
+						}
+					</div>
+				}
+			</div>
+		</aside>
+	}
+</div>
