Brands Logos Added

--- a/ServerDemo/Shared/Components.razor
+++ b/ServerDemo/Shared/Components.razor
@@ -7,5 +7,6 @@
         <a href="/popup">Popup</a>
         <a href="/dialog">Dialog</a>
         <a href="/dockscrolling">Dock Scrolling</a>
+        <a href="/icons">Icons</a>
     </div>
 </div>
