Logos components updated

--- a/Components/General/Icons/Brands/AppleLogo.razor
+++ b/Components/General/Icons/Brands/AppleLogo.razor
@@ -1,7 +1,10 @@
 ﻿@namespace AngryMonkey.Cloud.Components.Icons
 
 <svg viewBox="0 0 32 32">
-	<path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M28,10.91A7.23,7.23,0,0,0,24.52,17a7.06,7.06,0,0,0,4.29,6.47A16.74,16.74,0,0,1,26.61,28c-1.37,2-2.8,3.94-5,3.94s-2.74-1.27-5.25-1.27S13.07,32,11.08,32s-3.38-1.82-5-4.06a19.63,19.63,0,0,1-3.34-10.6c0-6.22,4-9.52,8-9.52,2.12,0,3.88,1.39,5.21,1.39s3.24-1.47,5.64-1.47A7.54,7.54,0,0,1,28,10.91ZM20.49,5.1A7.12,7.12,0,0,0,22.19.64,3.24,3.24,0,0,0,22.13,0a7.15,7.15,0,0,0-4.71,2.43,6.93,6.93,0,0,0-1.76,4.33,2.9,2.9,0,0,0,.06.58,2.42,2.42,0,0,0,.43,0A6.18,6.18,0,0,0,20.49,5.1Z" />
+	<path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M26.4,9.7c-1.8,1.1-2.9,3.1-3,5.2c0,2.4,1.4,4.6,3.7,5.5c-0.4,1.4-1.1,2.7-1.9,3.9c-1.2,1.7-2.4,3.4-4.3,3.4
+	c-1.9,0-2.3-1.1-4.5-1.1s-2.8,1.1-4.5,1.1s-2.9-1.6-4.3-3.5c-1.8-2.7-2.8-5.8-2.8-9C4.9,9.9,8.3,7,11.7,7c1.8,0,3.3,1.2,4.4,1.2
+	S18.9,7,21,7C23.1,6.9,25.2,7.9,26.4,9.7z M20,4.7c0.9-1.1,1.4-2.4,1.4-3.8c0-0.2,0-0.4-0.1-0.5c-1.6,0.2-3,0.9-4,2.1
+	c-0.9,1-1.4,2.3-1.5,3.7c0,0.2,0,0.3,0.1,0.5c0.1,0,0.2,0,0.4,0C17.8,6.5,19.1,5.8,20,4.7z"/>
 </svg>
 
 @code{
