--- a/Components/General/Icons/Brands/InstagramLogo.razor
+++ b/Components/General/Icons/Brands/InstagramLogo.razor
@@ -1,37 +1,16 @@
 ﻿@namespace AngryMonkey.Cloud.Components.Icons
 
 
-<svg viewBox="0 0 512 512">
-<g>
-	 @if (UseDefaultTheme)
-    {
-        <defs>
-				<linearGradient id="InstagramLogoLinearGradient" gradientUnits="userSpaceOnUse" x1="22.9495" y1="454.1062" x2="738.4631" y2="-155.1452">
-					<stop offset="0.0011" style="stop-color:#FFE185" />
-					<stop offset="0.2094" style="stop-color:#FFBB36" />
-					<stop offset="0.3765" style="stop-color:#FF5176" />
-					<stop offset="0.5238" style="stop-color:#F63395" />
-					<stop offset="0.7394" style="stop-color:#A436D2" />
-					<stop offset="1" style="stop-color:#5F4EED" />
-				</linearGradient>
-        </defs>
-    }
-
-		<path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M386.3978,99.0718c-16.0962,0-29.1467,13.0505-29.1467,29.1467c0,16.0976,13.0505,29.1467,29.1467,29.1467
-		c16.0976,0,29.1467-13.0491,29.1467-29.1467C415.5445,112.1223,402.4954,99.0718,386.3978,99.0718z M256.8186,136.4493
-		c-67.5108,0-122.4375,54.9253-122.4375,122.4361s54.9267,122.4361,122.4375,122.4361s122.4347-54.9253,122.4347-122.4361
-		S324.3294,136.4493,256.8186,136.4493z M256.8186,337.3156c-43.2461,0-78.4303-35.1828-78.4303-78.4303
-		c0-43.2461,35.1842-78.4275,78.4303-78.4275c43.2475,0,78.4275,35.1814,78.4275,78.4275
-		C335.2461,302.1329,300.0661,337.3156,256.8186,337.3156z M503.8675,157.1272c0-82.4737-66.8618-149.3327-149.341-149.3327
-		H157.4254c-82.4778,0-149.341,66.859-149.341,149.3327v197.119c0,82.4737,66.8632,149.3327,149.341,149.3327h197.1011
-		c82.4792,0,149.341-66.859,149.341-149.3327V157.1272z M457.0955,354.2463c0,56.6425-45.921,102.5607-102.5691,102.5607H157.4254
-		c-56.6467,0-102.569-45.9182-102.569-102.5607v-197.119c0-56.6425,45.9223-102.5607,102.569-102.5607h197.1011
-		c56.6481,0,102.5691,45.9182,102.5691,102.5607V354.2463z" />
-</g>
+<svg viewBox="0 0 32 32">
+    <path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M22.3,8.1c-0.8,0-1.4,0.6-1.4,1.4c0,0.8,0.6,1.4,1.4,1.4c0.8,0,1.4-0.6,1.4-1.4C23.7,8.7,23.1,8.1,22.3,8.1z M16,9.9
+	c-3.3,0-5.9,2.7-5.9,5.9s2.7,5.9,5.9,5.9s5.9-2.7,5.9-5.9S19.3,9.9,16,9.9z M16,19.6c-2.1,0-3.8-1.7-3.8-3.8c0-2.1,1.7-3.8,3.8-3.8
+	c2.1,0,3.8,1.7,3.8,3.8C19.8,17.9,18.1,19.6,16,19.6z M28,10.9c0-4-3.2-7.2-7.2-7.2h-9.6c-4,0-7.2,3.2-7.2,7.2v9.6
+	c0,4,3.2,7.2,7.2,7.2h9.6c4,0,7.2-3.2,7.2-7.2V10.9z M25.7,20.5c0,2.7-2.2,5-5,5h-9.6c-2.7,0-5-2.2-5-5v-9.6c0-2.7,2.2-5,5-5h9.6
+	c2.7,0,5,2.2,5,5L25.7,20.5L25.7,20.5z" />
 </svg>
 
-@code{
+@code {
 
-	[Parameter]	public bool UseDefaultTheme { get; set; } = false;
-	protected string DefaultClass => UseDefaultTheme ? "_default" : null;
+    [Parameter] public bool UseDefaultTheme { get; set; } = false;
+    protected string DefaultClass => UseDefaultTheme ? "_default" : null;
 }
