--- a/ServerDemo/Pages/IconsPage.razor
+++ b/ServerDemo/Pages/IconsPage.razor
@@ -21,6 +21,7 @@
         <MetaLogo UseDefaultTheme="@UseDefaultTheme" />
         <FacebookLogo UseDefaultTheme="@UseDefaultTheme" />
         <InstagramLogo UseDefaultTheme="@UseDefaultTheme" />
+        <TwitterLogo UseDefaultTheme="@UseDefaultTheme" />
     </div>
 </section>
 
