--- a/Components/General/Icons/Brands/FacebookLogo.razor
+++ b/Components/General/Icons/Brands/FacebookLogo.razor
@@ -1,8 +1,8 @@
 ﻿@namespace AngryMonkey.Cloud.Components.Icons
 
-<svg viewBox="0 0 50 50">
-	<path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M36.5,16.5l-0.9,8.6h-7v24.4H18.1V25.1h-4.9v-8.6h4.9v-5.5c0-4,2-10.2,10.5-10.2h7.7V9h-5.5c-0.9,0-2.2,0.5-2.2,2.3v5.1
-			C28.6,16.5,36.5,16.5,36.5,16.5z" />
+<svg viewBox="0 0 32 32">
+	<path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M21.7,11.8l-0.4,4.3h-3.5v12.2h-5.2V16.1H10v-4.3h2.4V9.1c0-2,1-5.1,5.2-5.1h3.8v4.1h-2.7c-0.4,0-1.1,0.2-1.1,1.1v2.5
+	C17.7,11.8,21.7,11.8,21.7,11.8z"/>
 </svg>
 
 @code{
