--- a/Components/General/Icons/Brands/GoogleLogo.razor
+++ b/Components/General/Icons/Brands/GoogleLogo.razor
@@ -1,14 +1,14 @@
 ﻿@namespace AngryMonkey.Cloud.Components.Icons
 
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-	<path class="amc-svg-fill amc-svg-stroke _4 @DefaultClass" d="M31.66,16.36a18.68,18.68,0,0,0-.25-3H16.34v6H25a7.43,7.43,0,0,1-3.2,4.77v4h5.14a15.62,15.62,0,0,0,4.75-11.76Z" />
-	<path class="amc-svg-fill amc-svg-stroke _3 @DefaultClass" d="M16.34,32a15.23,15.23,0,0,0,10.57-3.88l-5.14-4a9.66,9.66,0,0,1-5.43,1.55,9.55,9.55,0,0,1-9-6.62H2.06v4.12A16,16,0,0,0,16.34,32Z" />
-	<path class="amc-svg-fill amc-svg-stroke _2 @DefaultClass" d="M7.37,19.05A9.08,9.08,0,0,1,6.86,16,9.61,9.61,0,0,1,7.37,13V8.83H2.06a15.8,15.8,0,0,0,0,14.34Z" />
-	<path class="amc-svg-fill amc-svg-stroke _1 @DefaultClass" d="M16.34,6.33a8.69,8.69,0,0,1,6.13,2.4L27,4.17A15.32,15.32,0,0,0,16.34,0,16,16,0,0,0,2.06,8.83L7.37,13a9.55,9.55,0,0,1,9-6.62Z" />
+    <path class="amc-svg-fill amc-svg-stroke _4 @DefaultClass" d="M27.8,16.3c0-0.8-0.1-1.5-0.2-2.3H16.3v4.5h6.5c-0.3,1.5-1.2,2.8-2.4,3.6v3h3.9C26.6,22.8,27.9,19.6,27.8,16.3L27.8,16.3z" />
+    <path class="amc-svg-fill amc-svg-stroke _3 @DefaultClass" d="M16.3,28c2.9,0.1,5.8-1,7.9-2.9l-3.9-3c-1.2,0.8-2.6,1.2-4.1,1.2c-3.1,0-5.8-2-6.8-5h-4v3.1C7.6,25.4,11.7,28,16.3,28z" />
+    <path class="amc-svg-fill amc-svg-stroke _2 @DefaultClass" d="M9.5,18.3c-0.3-0.7-0.4-1.5-0.4-2.3c0-0.8,0.1-1.5,0.4-2.3v-3.1h-4C3.8,14,3.8,18,5.5,21.4L9.5,18.3z" />
+    <path class="amc-svg-fill amc-svg-stroke _1 @DefaultClass" d="M16.3,8.7c1.7,0,3.4,0.6,4.6,1.8l3.4-3.4c-2.2-2-5-3.2-8-3.1c-4.5,0-8.7,2.6-10.7,6.6l4,3.1C10.5,10.8,13.2,8.8,16.3,8.7L16.3,8.7z" />
 </svg>
 
-@code{
-	
-	[Parameter] public bool UseDefaultTheme { get; set; } = false;
-	protected string DefaultClass => UseDefaultTheme ? "_default" : null;
+@code {
+
+    [Parameter] public bool UseDefaultTheme { get; set; } = false;
+    protected string DefaultClass => UseDefaultTheme ? "_default" : null;
 }
