--- a/Components/General/Icons/Brands/MetaLogo.razor
+++ b/Components/General/Icons/Brands/MetaLogo.razor
@@ -1,16 +1,9 @@
 ﻿@namespace AngryMonkey.Cloud.Components.Icons
 
 <svg viewBox="0 0 32 32">
-    @if (UseDefaultTheme)
-    {
-        <defs>
-            <linearGradient id="MetaLogoLinearGradient" x1="-501.58" y1="1341.61" x2="-490.44" y2="1341.05" gradientTransform="matrix(1.98, 0, 0, -1.98, 999.45, 2671.07)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0064e1" /><stop offset="0.4" stop-color="#0064e1" /><stop offset="0.83" stop-color="#0073ee" /><stop offset="1" stop-color="#0082fb" /></linearGradient><linearGradient id="b" x1="-502.76" y1="1338.88" x2="-502.76" y2="1342.99" gradientTransform="matrix(1.98, 0, 0, -1.98, 999.45, 2671.07)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0082fb" /><stop offset="1" stop-color="#0064e0" /></linearGradient>
-        </defs>
-    }
-
-    <path class="amc-svg-fill amc-svg-stroke _1 @DefaultClass" d="M3.43,20.22A5.36,5.36,0,0,0,4.05,23,2.13,2.13,0,0,0,5.9,24c.9,0,1.72-.22,3.31-2.42C10.49,19.82,12,17.35,13,15.8l1.71-2.63a25.19,25.19,0,0,1,4.14-5.23,6.26,6.26,0,0,1,4.08-1.75c2.34,0,4.58,1.36,6.29,3.91A17.89,17.89,0,0,1,32,20a9.75,9.75,0,0,1-1.15,5,4.8,4.8,0,0,1-4.36,2.42V24c2,0,2.46-1.81,2.46-3.87a16.36,16.36,0,0,0-2.2-8.54c-1.07-1.66-2.46-2.67-4-2.67s-3,1.25-4.48,3.47c-.8,1.18-1.61,2.62-2.53,4.25l-1,1.79a46.14,46.14,0,0,1-3.55,5.76c-1.78,2.37-3.3,3.26-5.29,3.26a5.19,5.19,0,0,1-4.8-2.57A9.28,9.28,0,0,1,0,20.1Z" />
-    <path class="amc-svg-fill amc-svg-stroke _2 @DefaultClass" d="M2.7,10.34C4.28,7.9,6.57,6.19,9.2,6.19a7,7,0,0,1,4.61,1.74c1.73,1.41,3.57,3.73,5.86,7.55l.82,1.37a57.86,57.86,0,0,0,3.78,5.82c.85,1,1.45,1.34,2.22,1.34,2,0,2.46-1.81,2.46-3.87L32,20a9.75,9.75,0,0,1-1.15,5,4.8,4.8,0,0,1-4.36,2.42,5.44,5.44,0,0,1-4.08-1.62,22.88,22.88,0,0,1-3.3-4.43l-2.87-4.79a32.35,32.35,0,0,0-3.53-5A4.83,4.83,0,0,0,9.14,9.67c-1.36,0-2.52,1-3.5,2.42Z" />
-    <path class="amc-svg-fill amc-svg-stroke _3 @DefaultClass" d="M9.14,9.67c-1.36,0-2.52,1-3.5,2.42a15.47,15.47,0,0,0-2.21,8.13A5.36,5.36,0,0,0,4.05,23L1.1,24.89A9.28,9.28,0,0,1,0,20.1,18.33,18.33,0,0,1,2.7,10.34C4.28,7.9,6.57,6.19,9.2,6.19Z" />
+    <path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M4.2,20c0,0.9,0.2,1.8,0.6,2.6c0.4,0.6,1,1,1.7,0.9c0.8,0,1.6-0.2,3.1-2.3c1.2-1.7,2.6-4,3.6-5.4l1.6-2.5c1.1-1.8,2.4-3.4,3.9-4.9c1-1,2.4-1.6,3.8-1.6c2.2,0,4.3,1.3,5.9,3.7c1.8,2.8,2.7,6,2.6,9.3c0.1,1.6-0.3,3.2-1.1,4.7c-0.8,1.5-2.4,2.3-4.1,2.3v-3.2c1.9,0,2.3-1.7,2.3-3.6c0.1-2.8-0.7-5.6-2.1-8c-1-1.6-2.3-2.5-3.8-2.5c-1.4,0-2.8,1.2-4.2,3.3c-0.8,1.1-1.5,2.5-2.4,4l-0.9,1.7c-1,1.9-2.1,3.7-3.3,5.4c-1.7,2.2-3.1,3.1-5,3.1C4.7,26.9,3,26,2,24.4c-0.7-1.4-1.1-2.9-1-4.5L4.2,20z" />
+    <path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M3.5,10.7C5,8.5,7.2,6.9,9.6,6.9c1.6,0,3.1,0.6,4.3,1.6c1.6,1.3,3.3,3.5,5.5,7.1l0.8,1.3c1.1,1.9,2.3,3.7,3.5,5.5c0.8,0.9,1.4,1.3,2.1,1.3c1.9,0,2.3-1.7,2.3-3.6l2.9-0.1c0.1,1.6-0.3,3.2-1.1,4.7c-0.8,1.5-2.4,2.3-4.1,2.3c-1.4,0.1-2.8-0.5-3.8-1.5c-1.2-1.3-2.2-2.6-3.1-4.2l-2.7-4.5c-1-1.7-2.1-3.2-3.3-4.7c-0.8-1.1-2-1.7-3.3-1.8c-1.3,0-2.4,0.9-3.3,2.3L3.5,10.7z" />
+    <path class="amc-svg-fill amc-svg-stroke @DefaultClass" d="M9.6,10.1c-1.3,0-2.4,0.9-3.3,2.3c-1.4,2.3-2.1,4.9-2.1,7.6c0,0.9,0.2,1.8,0.6,2.6L2,24.4c-0.7-1.4-1.1-2.9-1-4.5c0-3.2,0.8-6.4,2.5-9.2C5,8.5,7.2,6.9,9.6,6.9L9.6,10.1z" />
 </svg>
 
 @code {
