--- a/ServerDemo/Pages/_Host.cshtml
+++ b/ServerDemo/Pages/_Host.cshtml
@@ -2,7 +2,7 @@
 @namespace ServerDemo.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-	Layout = "Layout";
+	Layout = "_Layout";
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
