Add versioning to static files for all environment

--- a/Components/CloudWeb/CloudBundle.razor
+++ b/Components/CloudWeb/CloudBundle.razor
@@ -1,3 +1,4 @@
 ﻿@namespace AngryMonkey.Cloud.Components
+@inject Microsoft.Extensions.DependencyInjection.CloudWeb cloudWeb
 
 @((MarkupString)Result)
