--- a/Demo/Pages/DateTimePickerPage.razor
+++ b/Demo/Pages/DateTimePickerPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/DateTimePicker"
 
-<PageTitle>Blazor Video Player Component</PageTitle>
+<PageTitle>Date Time Picker Component</PageTitle>
 
 <div class="amc-datetimepicker-section">
     <div>
