--- a/Components/General/css/common.less
+++ b/Components/General/css/common.less
@@ -1,22 +1,6 @@
-﻿.Selectable {
-	-webkit-touch-callout: initial;
-	-webkit-user-select: text;
-	-moz-user-select: text;
-	-ms-user-select: text;
-	user-select: text;
-}
-
-.UnSelectable {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
+﻿.ComponentsDefault {
 	user-select: none;
-}
-
-.ComponentsDefault {
-	.UnSelectable();
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Segoe UI';
 	font-size: .9rem;
 
 	button {
