--- a/Components/ProgressBar/ProgressBar.razor.css
+++ b/Components/ProgressBar/ProgressBar.razor.css
@@ -1,24 +1,6 @@
-.Selectable {
-  -webkit-touch-callout: initial;
-  -webkit-user-select: text;
-  -moz-user-select: text;
-  -ms-user-select: text;
-  user-select: text;
-}
-.UnSelectable {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
 .ComponentsDefault {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI';
   font-size: 0.9rem;
 }
 .ComponentsDefault button,
@@ -59,12 +41,8 @@
 }
 .amc-progressbar {
   --amc-progressbar-seekbuttonSize: 20px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI';
   font-size: 0.9rem;
   display: grid;
   grid-template-areas: 'left middle right';
